src/objects/jj_rb_Rebate_Claim_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>jj_rb_Assoc_Contract_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract line item evaluated for this claim line item.</description>
        <label>Associated Contract Line Item</label>
        <referenceTo>jj_rb_Rebate_Contract_Line_Item__c</referenceTo>
        <relationshipLabel>Rebate Claim Line Items</relationshipLabel>
        <relationshipName>Rebate_Claim_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Assoc_IMS_Sales_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IMS Sales data associated with this claim line item.</description>
        <label>Associated IMS Sales Data</label>
        <referenceTo>jj_rb_IMS_Sales_Data__c</referenceTo>
        <relationshipLabel>Rebate Claim Line Items</relationshipLabel>
        <relationshipName>Rebate_Claim_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Calculated_VAT__c</fullName>
        <label>Calculated VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Calculated_quantity__c</fullName>
        <description>This field stores the quantity value present in the contract line item</description>
        <label>Calculated quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Calculated_rebate_price__c</fullName>
        <label>Calculated rebate price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Contract_price__c</fullName>
        <label>Contract price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Difference_in_Qty__c</fullName>
        <formula>jj_rb_Quantity__c - jj_rb_Calculated_quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Difference_in_rebate_price1__c</fullName>
        <formula>jj_rb_Rebate_Per_Unit__c - jj_rb_Calculated_rebate_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in rebate price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Hospital_Id__c</fullName>
        <description>This field stores the hospital iConnectId</description>
        <externalId>true</externalId>
        <label>Hospital Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Hospital__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated hospital lookup field</description>
        <label>Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rebate Claim Line Items</relationshipLabel>
        <relationshipName>Rebate_Claim_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Net_Contract_Price__c</fullName>
        <description>Calculated net contract price</description>
        <formula>jj_rb_Contract_price__c *  jj_rb_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Net_List_Price__c</fullName>
        <description>Calculated Net list price</description>
        <formula>jj_rb_Unit_List_Price__c *  jj_rb_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Net_Rebate__c</fullName>
        <formula>jj_rb_Quantity__c *  jj_rb_Rebate_Per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Net_Rebate_including_VAT__c</fullName>
        <label>Net Rebate including VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Quantity__c</fullName>
        <description>Quantity of the product</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Quantity_validation__c</fullName>
        <description>This field indicates that the difference of the quantity in the claim and IMS quantity is outside the tolerance limit.</description>
        <formula>IMAGE( IF(jj_rb_Tolerance_Failed_Qty__c ,&quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_green.gif&quot;),&quot;/img/samples/flag_green.gif&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Claim__c</fullName>
        <label>Rebate Claim</label>
        <referenceTo>jj_rb_Rebate_Claim__c</referenceTo>
        <relationshipLabel>Rebate Claim Line Items</relationshipLabel>
        <relationshipName>Rebate_Claim_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Per_Unit__c</fullName>
        <label>Rebate per unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Rebate_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product for which rebate is being claimed.</description>
        <label>Product</label>
        <referenceTo>jj_rb_Rebate_Product__c</referenceTo>
        <relationshipLabel>Rebate Claim Line Items</relationshipLabel>
        <relationshipName>Rebate_Claim_Line_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Tolerance_Failed_Qty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that the tolerance check for quantity has failed.</description>
        <label>Tolerance Failed Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jj_rb_Tolerance_Failed_Rebate__c</fullName>
        <formula>IF((jj_rb_Difference_in_rebate_price1__c)!=0.00 ,True ,False )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tolerance Failed Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jj_rb_Unit_Contract_Price__c</fullName>
        <description>Contract price of a single unit</description>
        <label>Unit Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_Unit_List_Price__c</fullName>
        <description>List price of  single unit.</description>
        <label>Unit List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>jj_rb_VAT_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT Code</label>
        <referenceTo>jj_rb_VAT_Code__c</referenceTo>
        <relationshipLabel>Rebate Claim Line Items</relationshipLabel>
        <relationshipName>Rebate_Claim_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_rebate_val_validation__c</fullName>
        <formula>IMAGE(  IF(jj_rb_Difference_in_rebate_price1__c!=0.00,&quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_green.gif&quot;),&quot;/img/samples/flag_green.gif&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Value Validation</label>
        <type>Text</type>
    </fields>
    <label>Rebate Claim Line Item</label>
    <nameField>
        <displayFormat>CLI-{0}</displayFormat>
        <label>Rebate Claim Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Claim Line Items</pluralLabel>
    <recordTypes>
        <fullName>jj_rb_Homecare_Claim</fullName>
        <active>true</active>
        <description>Use this to create a claim line item for a Homecare claim.</description>
        <label>Homecare Claim</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Retailer_Rebate_Claim</fullName>
        <active>true</active>
        <label>Retailer Rebate Claim</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>jj_rb_Claim_Line_Item_VAT_code</fullName>
        <active>true</active>
        <description>This validation rule checks if the line item VAT code matches.</description>
        <errorConditionFormula>jj_rb_VAT_Code__c &lt;&gt; jj_rb_Rebate_Product__r.jj_rb_VAT_Code__c</errorConditionFormula>
        <errorMessage>VAT Code selected does not match the product VAT Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_UnitLP_greater_UnitCP</fullName>
        <active>true</active>
        <description>For Homecare claim line items, the Unit list price should be greater than the Unit contract price.</description>
        <errorConditionFormula>RecordType.DeveloperName =&apos;jj_rb_Homecare_Claim&apos; &amp;&amp;  jj_rb_Unit_Contract_Price__c  &gt;  jj_rb_Unit_List_Price__c</errorConditionFormula>
        <errorMessage>Unit list price should be greater than Unit contract price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_Unit_Rebate_Diff_LP_CP</fullName>
        <active>true</active>
        <description>Unit Rebate price should be the difference of the List Price and the Contract price.</description>
        <errorConditionFormula>AND( ISNEW(), RecordType.DeveloperName = &apos;jj_rb_Homecare_Claim&apos;, 
jj_rb_Rebate_Per_Unit__c &lt;&gt; (jj_rb_Unit_List_Price__c - jj_rb_Unit_Contract_Price__c))</errorConditionFormula>
        <errorMessage>Unit Rebate Price should be the difference of the Unit List Price and Unit Contract Price.</errorMessage>
    </validationRules>
</CustomObject>